# aws-lambda-performance-benchmarks

./: .editorconfig  .eslintrc.json  .gitignore  .mcp.json  .prettierignore  .prettierrc.json  CLAUDE.md  DECISIONS.md  LICENSE  README.md  benchmark-run-nov28.txt  ec2-benchmark-run.txt  package-lock.json  package.json  pyproject.toml  test-run-id.txt
.claude/commands/: analyze.md  benchmark-test.md  validate.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
cdk/: cdk.json  package-lock.json  package.json  tsconfig.json
cdk/lib/: cdk-stack.ts
cdk/lib/config/: lambda-config.ts
cdk/lib/constructs/: benchmark-function.ts  results-table.ts  test-data-table.ts
docs/: README.md  benchmark-design.md  dynamodb-schema.md  handler-api-spec.md  metrics-collection-implementation.md
lambdas/nodejs/: .eslintrc.cjs  package.json  tsconfig.json
lambdas/nodejs/cpu-intensive/: handler.ts
lambdas/nodejs/light/: handler.ts
lambdas/nodejs/memory-intensive/: handler.ts
lambdas/python/cpu-intensive/: handler.py
lambdas/python/light/: handler.py
lambdas/python/memory-intensive/: handler.py
lambdas/rust/: Cargo.toml
lambdas/rust/cpu-intensive/: Cargo.toml
lambdas/rust/cpu-intensive/src/: main.rs
lambdas/rust/light/: Cargo.toml
lambdas/rust/light/src/: main.rs
lambdas/rust/memory-intensive/: Cargo.toml
lambdas/rust/memory-intensive/src/: main.rs
published-results/december-2025/: README.md
published-results/december-2025/tables/cpu-intensive/: cold.md  warm.md
published-results/december-2025/tables/light/: cold.md  warm.md
published-results/december-2025/tables/memory-intensive/: cold.md  warm.md
published-results/november-2025/: README.md
published-results/november-2025/tables/cpu-intensive/: cold.md  warm.md
published-results/november-2025/tables/light/: cold.md  warm.md
published-results/november-2025/tables/memory-intensive/: cold.md  warm.md
scripts/: analyze_results.py  benchmark_orchestrator.py  benchmark_utils.py  clear_dynamodb_tables.py  run_benchmark_on_ec2.py
