[workspace]
members = [
    "cpu-intensive",
    "memory-intensive",
    "light",
]
resolver = "2"

[workspace.dependencies]
lambda_runtime = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
aws-sdk-dynamodb = "1.63"
aws-config = "1.5"
sha2 = "0.10"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3       # Optimize for speed (critical for benchmark accuracy)
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary
panic = "abort"     # Don't unwind on panic (smaller binary, Lambda terminates anyway)
