[package]
name = "light"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-config = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
